[#11] security 오류 수정